--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Pacifico&family=Whisper&display=swap');
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /*font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;*/
   line-height: 1.5;
   font-weight: 400;
 
@@ -13,17 +13,51 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  /* FONTS */
+
   --main-font: 'Inter', sans-serif;
   --heading-font: 'Pacifico', cursive;
   --signature-font: 'Whisper', cursive;
+
+  /* COLORS */
+
+  --primary: #7CB342; /*lime-green*/
+  --accent: #FF6347; /*tomato-red*/
+  --bright-red: #FF5555;
+  --light-grey: #F6F6F6;
+  --smoke-white: #F5F5F5;
+  --dark-grey: #333333;
+  --amber: #FFD54D;
+  --pale-yellow: #FFECB3;
 }
 
+body{
+  font-family: var(--main-font);
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
+}
 
 #app{
-  padding: 1rem;
+  /* padding: 1rem; */
+  
 }
 
 .container{
   max-width: 1200px;
   margin: 0 auto;
+  padding: 1rem;
+}
+
+section h1{
+  font-size: 2.125rem;
+  color: var(--primary);
+}
+
+footer{
+  background-color: var(--dark-grey);
+  color: var(--smoke-white);
+  flex-shrink: 0;
+  margin-top: auto;
 }
