--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Pacifico&family=Whisper&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Pacifico&family=Whisper&display=swap");
 :root {
   /*font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;*/
   line-height: 1.5;
@@ -15,25 +15,25 @@
 
   /* FONTS */
 
-  --main-font: 'Inter', sans-serif;
-  --heading-font: 'Pacifico', cursive;
-  --signature-font: 'Whisper', cursive;
+  --main-font: "Inter", sans-serif;
+  --heading-font: "Pacifico", cursive;
+  --signature-font: "Whisper", cursive;
 
   /* COLORS */
 
-  --primary: #42B883; /*lime-green*/
-  --accent: #FF6347; /*tomato-red*/
-  --bright-red: #FF5555;
-  --light-grey: #F6F6F6;
-  --smoke-white: #F5F5F5;
+  --primary: #42b883; /*lime-green*/
+  --accent: #ff6347; /*tomato-red*/
+  --bright-red: #ff5555;
+  --light-grey: #f6f6f6;
+  --smoke-white: #f5f5f5;
   --dark-grey: #333333;
-  --amber: #FFD54D;
-  --pale-yellow: #FFECB3;
+  --amber: #ffd54d;
+  --pale-yellow: #ffecb3;
   --green-light: #42d392;
   --green-lighter: #35eb9a;
 }
 
-body{
+body {
   font-family: var(--main-font);
   margin: 0;
   display: flex;
@@ -41,18 +41,26 @@ body{
   min-height: 100dvh;
 }
 
-.container{
+.container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 1rem;
 }
 
-section h1, .title{
+section h1,
+.title {
   font-size: 2.125rem;
   color: var(--primary);
 }
 
-footer{
+section.subhero {
+  padding: 0.5rem;
+  background: var(--light-grey);
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+footer {
   background-color: var(--dark-grey);
   color: var(--smoke-white);
   flex-shrink: 0;
