Get Recipes, Add Recipe working state with firestore

--- a/src/style.css
+++ b/src/style.css
@@ -77,5 +77,5 @@ footer {
   background-color: var(--dark-grey);
   color: var(--smoke-white);
   flex-shrink: 0;
-  margin-top: 2.5rem;
+  margin-top: auto;
 }
