--- a/src/style.css
+++ b/src/style.css
@@ -80,3 +80,28 @@ footer {
   flex-shrink: 0;
   margin-top: auto;
 }
+
+/* Font Awesome */
+.svg-inline--fa {
+  color: var(--primary);
+  width: 1rem;
+}
+
+.svg-inline--fa.fav-btn {
+  color: var(--accent);
+  font-size: 1.55rem;
+  cursor: pointer;
+}
+
+.svg-inline--fa.low {
+  color: var(--primary);
+}
+.svg-inline--fa.medium {
+  color: var(--amber);
+}
+.svg-inline--fa.high {
+  color: var(--accent);
+}
+.svg-inline--fa.extreme {
+  color: red;
+}
