--- a/src/style.css
+++ b/src/style.css
@@ -110,6 +110,24 @@ section.subhero h4 {
   border-radius: 5px;
 } */
 
+.search-input {
+  padding: 0.25rem 0.5rem;
+  border: 1px solid var(--primary);
+  height: 2.5rem;
+  margin-bottom: 1.5rem;
+  width: 370px;
+  max-width: calc(100% - 16px);
+  font-family: var(--main-font);
+  font-size: 0.95rem;
+}
+.search-input:focus {
+  border: 1px solid var(--primary);
+}
+
+.search-input:focus-visible {
+  outline: var(--primary) auto 2px;
+}
+
 footer {
   background-color: var(--dark-grey);
   color: var(--smoke-white);
