--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,7 @@
 
   --primary: #42b883; /*lime-green*/
   --accent: #ff6347; /*tomato-red*/
+  --border-color: #eaecf1;
   --bright-red: #ff5555;
   --light-grey: #f6f6f6;
   --smoke-white: #f5f5f5;
@@ -202,8 +203,8 @@ button.submit-btn {
 
 .svg-inline--fa.fav-btn {
   color: var(--accent);
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.25rem;
+  height: 1.25rem;
   cursor: pointer;
 }
 
